<resources>
    <string name="app_name">SmartCity</string>

    <!--Navigation menu items-->
    <string name="left_menu_home">HOME </string>
    <string name="example_short">EXAMPLE</string>

    <!--SIGN UP FRAGMENT-->
    <string name="signup_title">SIGN UP</string>

    <!-- FACEBOOK ID -->
    <string name="facebook_app_id" translatable="false">2278954909045576</string>
    <string name="fb_login_protocol_scheme">fb2278954909045576</string>


    <string name="terms_and_conditions_check_box">I agree to the terms and conditions</string>
    <string name="title_activity_maps">Map</string>
    <string name="or">OR</string>
    <string name="login_with_facebook">Login with facebook</string>
    <string name="my_account">MY ACCOUNT</string>
    <string name="My_Account">My Account</string>
    <string name="email_hint">example@example.com</string>
    <string name="new_password">password</string>
    <string name="re_type_password">re-type password</string>
    <string name="email">Email</string>
    <string name="new_password_tv">New Password</string>
    <string name="re_type_password_tv">Re-type Password</string>
    <string name="sign_out">Log Out</string>
    <string name="fullname">%s %s</string>
    <string name="please_login_to_access_your_account">Please Login to access your account</string>
    <string name="map_title">MAP</string>
    <string name="google_maps_API_key">AIzaSyDFaLSB1CTTS22vtCr0RlAuL4k2Iz3I4w0</string>
    <string name="welcome_msj">Welcome to %s.\nWe wish you a pleasant stay!</string>
</resources>
