<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.AppBarLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ux.home.myAccount.MyAccountFragment">

    <include
        android:id="@+id/myAccountToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/toolbar_burger"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/viewLogin"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="16dp"
                android:src="@drawable/default_person_img"
                app:civ_border_color="@color/fw_seaweed"
                app:civ_border_width="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fullname_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/bebasneue_bold"
                android:text="@string/fullname"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_image" />

            <TextView
                android:id="@+id/email_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/email"
                app:layout_constraintEnd_toEndOf="@+id/email_edit_Text"
                app:layout_constraintStart_toStartOf="@+id/email_edit_Text"
                app:layout_constraintTop_toBottomOf="@+id/fullname_tv" />

            <EditText
                android:id="@+id/email_edit_Text"
                style="@style/SmartCityTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_tv" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/new_password_tv"
                app:layout_constraintEnd_toEndOf="@+id/new_password_edit_Text"
                app:layout_constraintStart_toStartOf="@+id/new_password_edit_Text"
                app:layout_constraintTop_toBottomOf="@+id/email_edit_Text" />

            <EditText
                android:id="@+id/new_password_edit_Text"
                style="@style/SmartCityTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/re_type_password_tv"
                app:layout_constraintEnd_toEndOf="@+id/retype_new_password_edit_Text"
                app:layout_constraintStart_toStartOf="@+id/retype_new_password_edit_Text"
                app:layout_constraintTop_toBottomOf="@+id/new_password_edit_Text" />

            <EditText
                android:id="@+id/retype_new_password_edit_Text"
                style="@style/SmartCityTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <Button
                android:id="@+id/logout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/shape_signout_btn"
                android:fontFamily="@font/bebasneue_bold"
                android:text="@string/sign_out"
                android:textColor="@color/fw_white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/retype_new_password_edit_Text"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/retype_new_password_edit_Text" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/noUserView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/Please_login_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:fontFamily="@font/bebasneue_bold"
                android:text="@string/please_login_to_access_your_account"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/login_from_my_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="login"
                android:textColor="@color/fw_white"
                android:background="@drawable/shape_signout_btn"
                app:layout_constraintEnd_toEndOf="@+id/Please_login_tv"
                app:layout_constraintStart_toStartOf="@+id/Please_login_tv"
                app:layout_constraintTop_toBottomOf="@+id/Please_login_tv" />
        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>



</android.support.design.widget.AppBarLayout>