<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ux.home.auth.LoginFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/login_background_image"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:src="@drawable/login_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_background_image">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <EditText
                    android:id="@+id/login_email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/fw_transparent"
                    android:drawableStart="@drawable/ic_image_email"
                    android:drawablePadding="16dp"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/fw_seaweed"
                    android:textColorHint="@color/fw_sesame"
                    android:textSize="@dimen/fw_heading_5" />

                <TextView
                    android:id="@+id/login_email_error"
                    style="@style/ErrorAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="-5dp"
                    android:text="@string/example_short"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/login_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/fw_transparent"
                    android:drawableStart="@drawable/ic_image_password"
                    android:drawablePadding="16dp"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:textColor="@color/fw_seaweed"
                    android:textColorHint="@color/fw_sesame"
                    android:textSize="@dimen/fw_heading_5" />

                <TextView
                    android:id="@+id/login_password_error"
                    style="@style/ErrorAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="-5dp"
                    android:text="@string/example_short"
                    android:visibility="gone" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="16dp"
            android:background="@color/fw_divider"
            app:layout_constraintBottom_toBottomOf="@+id/or"
            app:layout_constraintEnd_toStartOf="@+id/or"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/or" />

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/or"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <View
            android:id="@+id/view_right"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:background="@color/fw_divider"
            app:layout_constraintBottom_toBottomOf="@+id/or"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/or"
            app:layout_constraintTop_toTopOf="@+id/or" />

        <Button
            android:id="@+id/loginWithFacebookCustomBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:text="@string/login_with_facebook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/or"/>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_login_invisible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/or" />

        <Button
            android:id="@+id/login_submit_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/shape_fab_seaweed"
            android:fontFamily="@font/bebasneue_bold"
            android:text="Submit"
            android:textColor="@color/fw_white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginWithFacebookCustomBtn" />

    </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.design.widget.AppBarLayout>